KSIE-84 updated to JaCoCo 0.8.0